--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1019,3 +1019,11 @@ WordPress plugin wp-live-chat-support:
     cve: 'OVE-20160712-0008 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wp_live_chat_support_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin contact-form-to-email:
+  1:
+    location: ['/wp-content/plugins/contact-form-to-email/readme.txt']
+    secure_version: '1.1.48'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160721-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
