Added support for WordPress plugin code-snippets

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1027,3 +1027,11 @@ WordPress plugin contact-form-to-email:
     cve: 'OVE-20160721-0003 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_contact_form_to_email_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin code-snippets:
+  1:
+    location: ['/wp-content/plugins/code-snippets/readme.txt']
+    secure_version: '2.7.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_code_snippets_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
