--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1035,3 +1035,11 @@ WordPress plugin code-snippets:
     cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_code_snippets_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin woocommerce:
+  1:
+    location: ['/wp-content/plugins/woocommerce/readme.txt']
+    secure_version: '2.6.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160720-0006 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_using_image_metadata__exif_.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
