--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1044,3 +1044,11 @@ WordPress plugin woocommerce:
     cve: 'OVE-20160720-0006 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_woocommerce_using_image_metadata__exif_.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin icegram:
+  1:
+    location: ['/wp-content/plugins/icegram/readme.txt']
+    secure_version: '1.9.19'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0032 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_icegram_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
