--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1068,3 +1068,11 @@ WordPress plugin paid-memberships-pro:
     cve: 'OVE-20160714-0015 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_paid_memberships_pro_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin xcloner-backup-and-restore:
+  1:
+    location: ['/wp-content/plugins/xcloner-backup-and-restore/readme.txt']
+    secure_version: '3.1.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.openwall.com/lists/oss-security/2016/07/27/2'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
