--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1077,3 +1077,11 @@ WordPress plugin xcloner-backup-and-restore:
     cve: 'http://www.openwall.com/lists/oss-security/2016/07/27/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin lazy-load:
+  1:
+    location: ['/wp-content/plugins/lazy-load/readme.txt']
+    secure_version: '0.6.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://twitter.com/klikkioy/status/755847310332923904'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
