--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1085,3 +1085,14 @@ WordPress plugin lazy-load:
     cve: 'https://twitter.com/klikkioy/status/755847310332923904'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 2.7.102 http://seclists.org/bugtraq/2015/Apr/10
+# 2.9.4.116 DoS
+# 2.9.5.118 http://security.szurek.pl/simple-ads-manager-294116-sql-injection.html
+WordPress plugin simple-ads-manager:
+  1:
+    location: ['/wp-content/plugins/simple-ads-manager/readme.txt']
+    secure_version: '2.9.5.118'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://security.szurek.pl/simple-ads-manager-294116-sql-injection.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
