--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1096,3 +1096,11 @@ WordPress plugin simple-ads-manager:
     cve: 'http://security.szurek.pl/simple-ads-manager-294116-sql-injection.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wordpress-form-manager:
+  1:
+    location: ['/wp-content/plugins/wordpress-form-manager/readme.txt']
+    secure_version: '1.7.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://appcheck-ng.com/remote-command-execution-in-wordpress-form-manager-plugin-cve-2015-7806/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
