--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1112,3 +1112,11 @@ WordPress plugin wp-file-upload:
     cve: 'https://wordpress.org/plugins/wp-file-upload/changelog/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin aryo-activity-log:
+  1:
+    location: ['/wp-content/plugins/aryo-activity-log/readme.txt']
+    secure_version: '2.3.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0037 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_wordpress_activity_log_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
