Added support for WordPress plugin insert-php

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1136,3 +1136,11 @@ WordPress plugin easy-testimonials:
     cve: 'OVE-20160712-0010 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_easy_testimonials_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin insert-php:
+  1:
+    location: ['/wp-content/plugins/insert-php/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160712-0001 https://sumofpwn.nl/advisory/2016/insert_php_wordpress_plugin_allows_authenticated_user_to_execute_arbitrary_php.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
