--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1144,3 +1144,11 @@ WordPress plugin insert-php:
     cve: 'OVE-20160712-0001 https://sumofpwn.nl/advisory/2016/insert_php_wordpress_plugin_allows_authenticated_user_to_execute_arbitrary_php.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin alo-easymail:
+  1:
+    location: ['/wp-content/plugins/alo-easymail/readme.txt']
+    secure_version: '2.9.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0021 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_alo_easymail_newsletter_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
