Added support for WordPress plugin booking

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1152,3 +1152,11 @@ WordPress plugin alo-easymail:
     cve: 'OVE-20160724-0021 https://sumofpwn.nl/advisory/2016/cross_site_request_forgery_in_alo_easymail_newsletter_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin booking:
+  1:
+    location: ['/wp-content/plugins/booking/readme.txt']
+    secure_version: '6.2.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160714-0002 https://sumofpwn.nl/advisory/2016/sql_injection_vulnerability_in_booking_calendar_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
