--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1176,3 +1176,11 @@ WordPress plugin wp-live-chat-support:
     cve: 'OVE-20160724-0010 https://sumofpwn.nl/advisory/2016/stored_cross_site_scripting_vulnerability_in_wp_live_chat_support_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wangguard:
+  1:
+    location: ['/wp-content/plugins/wangguard/readme.txt']
+    secure_version: '1.7.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0030 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_wangguard_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
