--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1184,3 +1184,11 @@ WordPress plugin wangguard:
     cve: 'OVE-20160724-0030 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_wangguard_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin uji-countdown:
+  1:
+    location: ['/wp-content/plugins/uji-countdown/readme.txt']
+    secure_version: '2.0.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'OVE-20160724-0029 https://sumofpwn.nl/advisory/2016/cross_site_scripting_in_uji_countdown_wordpress_plugin.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
